--- a/demo/core_demo.html
+++ b/demo/core_demo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Literally Canvas</title>
-    <link href="/lib/css/literallycanvas.css" rel="stylesheet">
+    <link href="/lib/css/literallycanvas-core.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 
@@ -22,6 +22,7 @@
       .literally {
         width: 100%;
         height: 100%;
+        position: relative;
       }
 
       .literally img.background, .literally > canvas {
@@ -98,7 +99,6 @@
         <a href="javascript:void(0);" class='tool' id="tool-dashed">Dashed Line</a>
         <a href="javascript:void(0);" class='tool' id="tool-ellipse">Ellipse</a>
         <a href="javascript:void(0);" class='tool' id="tool-rectangle">Rectangle</a>
-        <a href="javascript:void(0);" class='tool' id="tool-polygon">Polygon</a>
       </div>
 
 <!-- SIZES WON'T WORK UNTIL SIZE EVENT PR IS MERGED! -->
@@ -161,6 +161,7 @@
         });
 
         lc = LC.init(containerOne, {
+          toolbarPosition: 'bottom',
           snapshot: JSON.parse(localStorage.getItem('drawing')),
           defaultStrokeWidth: 10,
           strokeWidths: [10, 20, 50],
@@ -245,10 +246,6 @@
             name: 'tool-rectangle',
             el: document.getElementById('tool-rectangle'),
             tool: new LC.tools.Rectangle(lc)
-          },{
-            name: 'tool-polygon',
-            el: document.getElementById('tool-polygon'),
-            tool: new LC.tools.Polygon(lc)
           }
         ];
 
