--- a/demo/core_demo.html
+++ b/demo/core_demo.html
@@ -98,6 +98,7 @@
         <a href="javascript:void(0);" class='tool' id="tool-dashed">Dashed Line</a>
         <a href="javascript:void(0);" class='tool' id="tool-ellipse">Ellipse</a>
         <a href="javascript:void(0);" class='tool' id="tool-rectangle">Rectangle</a>
+        <a href="javascript:void(0);" class='tool' id="tool-polygon">Polygon</a>
       </div>
 
 <!-- SIZES WON'T WORK UNTIL SIZE EVENT PR IS MERGED! -->
@@ -244,6 +245,10 @@
             name: 'tool-rectangle',
             el: document.getElementById('tool-rectangle'),
             tool: new LC.tools.Rectangle(lc)
+          },{
+            name: 'tool-polygon',
+            el: document.getElementById('tool-polygon'),
+            tool: new LC.tools.Polygon(lc)
           }
         ];
 
