--- a/demo/core_demo.html
+++ b/demo/core_demo.html
@@ -163,7 +163,7 @@
 
         lc = LC.init(containerOne, {
           toolbarPosition: 'bottom',
-          snapshot: JSON.parse(localStorage.getItem('drawing')),
+          // snapshot: JSON.parse(localStorage.getItem('drawing')),
           defaultStrokeWidth: 10,
           strokeWidths: [10, 20, 50],
           secondaryColor: 'transparent',
